# douki

android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/anhquan/douki/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/anhquan/douki/: MainActivity.kt
android/app/src/main/java/com/anhquan/douki/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/anhquan/douki/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
linux/: CMakeLists.txt  ubuntu_deps.sh
linux/include/: auth-manager.h  authentication.h  constants.h  database-result.h  database.h  dbus-credential.h  device-connection.h  device-info.h  device-listener.h  device-message.h  entity-device.h  entity-info.h  iface-credential.h  logger-util.h  process.h  string-util.h
linux/res/dbus/: run-codegen.sh
linux/res/dbus/v1/: authentication.xml  com.anhquan.DoukiDbus.Credential.xml  com.douki.Credential.xml
linux/src/: main.c
linux/src/core/: device-connection.c  device-listener.c  mdns.c  process.c
linux/src/core/auth/: auth-manager.c
linux/src/core/dbus/: authentication.c
linux/src/core/socket/: device-connection.c
linux/src/database/: database.c
linux/src/database/entity/: entity-device.c  entity-info.c
linux/src/dbus/: dbus-credential.c  iface-credential.c
linux/src/model/: database-result.c  device-info.c  device-message.c
linux/src/utils/: logger-util.c  string-util.c
